--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>React Redux Boilerplate</title>
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Righteous" rel="stylesheet">
   <link rel="stylesheet" href="/main.css">
 </head>
 <body>
