--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>React Redux Boilerplate</title>
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Righteous|Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
